# academus

./: .env.example  DEVILLINT_TEST.md  README.md  devilkit.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  LICENSE  README.md  manage.py  pytest.ini  test_me.py  vercel.json
backend/.secrets/: secrets.json
backend/api/cli/: main.py
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_token.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/automation/: permissions.py  urls.py
backend/apps/automation/serializers/: generate.py
backend/apps/automation/tests/: test_audit.py  test_generate.py
backend/apps/dashboard/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/core/: asgi.py  urls.py  views.py  wsgi.py
backend/core/settings/: __init__.py  base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: bootstrap.sh  create_superuser.sh  load_fixtures.sh
docs/: dev-config.md  index.md
docs/api/: index.md
docs/api/accounts/: endpoints.md
docs/api/dashboard/: endpoints.md
docs/api/schema/: docs.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Sidebar.jsx
frontend/src/context/: UserContext.jsx
frontend/src/features/: LoginPage.jsx
frontend/src/pages/: Dashboard.jsx  LoginPage.jsx  TarefasPage.jsx
frontend/src/services/: api.js  authService.js
(+3 files in other folders)
